--- a/consolidación_datos_.ipynb
+++ b/consolidación_datos_.ipynb
@@ -49,7 +49,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: abrir archivo excel paraa verlo\n",
+        "# prompt: abrir el archivo excel \n",
         "\n",
         "df = pd.read_excel('/content/supermarket_sales - Sheet1.xlsx')\n",
         "\n",
